<resources>
    <string name="app_name">LollyAndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ZW Studio</string>
    <string name="nav_header_subtitle">zwvista@msn.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="words_unit">Words in Unit</string>
    <string name="words_unit_edit">Words in Unit(Edit)</string>
    <string name="words_unit_detail">Words in Unit(Detail)</string>
    <string name="words_unit_batch_edit">Words in Unit(Batch)</string>
    <string name="phrases_unit">Phrases in Unit</string>
    <string name="phrases_unit_edit">Phrases in Unit(Edit)</string>
    <string name="phrases_unit_detail">Phrases in Unit(Detail)</string>
    <string name="phrases_unit_batch_edit">Phrases in Unit(Batch)</string>
    <string name="words_review">Words Review</string>
    <string name="phrases_review">Phrases Review</string>
    <string name="words_lang">Words in Language</string>
    <string name="words_lang_edit">Words in Language(Edit)</string>
    <string name="words_lang_detail">Words in Language(Detail)</string>
    <string name="phrases_lang">Phrases in Language</string>
    <string name="phrases_lang_edit">Phrases in Language(Edit)</string>
    <string name="phrases_lang_detail">Phrases in Language(Detail)</string>
    <string name="words_textbook">Words in Textbook</string>
    <string name="words_textbook_edit">Words in Textbook(Edit)</string>
    <string name="words_textbook_detail">Words in Textbook(Detail)</string>
    <string name="phrases_textbook">Phrase in Textbook</string>
    <string name="phrases_textbook_edit">Phrase in Textbook(Edit)</string>
    <string name="phrases_textbook_detail">Phrase in Textbook(Detail)</string>
    <string name="patterns">Patterns in Language</string>
    <string name="patterns_detail">Patterns in Language(Detail)</string>
    <string name="patterns_webpages_browse">Pattern Web Pages(Browse)</string>
    <string name="patterns_webpages_list">Pattern Web Pages(List)</string>
    <string name="patterns_webpages_detail">Patterns Web Pages(Detail)</string>
    <string name="words_dict">Word Dictionary</string>

    <string name="action_edit">Edit</string>
    <string name="action_add">Add</string>
    <string name="action_retrieve_notes_all">Retrieve All Notes</string>
    <string name="action_retrieve_notes_empty">Retrieve Notes If Empty</string>
    <string name="action_clear_notes_all">Clear All Notes</string>
    <string name="action_clear_notes_empty">Clear Notes If Empty</string>
    <string name="action_batch">Batch Edit</string>
    <string name="action_save">Save</string>
    <string name="label_id">ID:</string>
    <string name="label_unit">UNIT:</string>
    <string name="label_part">PART:</string>
    <string name="label_seqnum">SEQNUM:</string>
    <string name="label_seqnum_add">SEQNUM(+):</string>
    <string name="label_wordid">WORDID:</string>
    <string name="label_word">WORD:</string>
    <string name="label_note">NOTE:</string>
    <string name="label_famiid">FAMIID:</string>
    <string name="label_accuracy">ACCURACY:</string>
    <string name="label_phraseid">PHRASEID:</string>
    <string name="label_phrase">PHRASE:</string>
    <string name="label_translation">TRANSLATION:</string>
    <string name="label_textbook">TEXTBOOK:</string>
    <string name="label_go">Go</string>
    <string name="label_to">To:</string>
    <string name="label_previous">Previous</string>
    <string name="label_next">Next</string>
    <string name="label_units">Units:</string>
    <string name="label_textbook2">Textbook:</string>
    <string name="label_pattern">PATTERN:</string>
    <string name="label_tags">TAGS:</string>
    <string name="label_patternid">PATTERNID:</string>
    <string name="label_webpageid">WEBPAGEID:</string>
    <string name="label_title">TITLE:</string>
    <string name="label_url">URL:</string>
    <string name="label_mode">Mode:</string>
    <string name="label_shuffled">Order(Shuffled):</string>
    <string name="label_speak_enabled">Speak(Enabled):</string>
    <string name="label_on_repeat">On Repeat:</string>
    <string name="label_move_forward">Move forward:</string>
    <string name="label_interval">Interval:</string>
    <string name="label_group">Group:</string>
    <string name="label_groups">Groups:</string>
    <string name="label_review">Review:</string>

    <string name="text_correct">Correct</string>
    <string name="text_incorrect">Incorrect</string>
    <string name="text_new_test">New Test</string>
    <string name="text_check">Check</string>
    <string name="text_speak">Speak</string>
    <string name="text_shuffled">Shuffled</string>
    <string name="text_on_repeat">On Repeat</string>
    <string name="text_move_forward">Forward</string>
    <string name="normal_mode">Normal Mode</string>
    <string name="edit_mode">Edit Mode</string>
    <string name="review_options">Review Options</string>
    <string name="label_language">Language:</string>
    <string name="label_voice">Voice:</string>
    <string name="label_dict_reference">Dictionary(Reference):</string>
    <string name="label_dict_note">Dictionary(Note):</string>
    <string name="label_dict_translation">Dictionary(Translation):</string>
    <string name="lolly">Lolly</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="newtest">NewTest</string>
    <string name="speak">Speak</string>
</resources>
