<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".words.WordsLangFragment">
    <group android:checkableBehavior="single">
        <item android:id="@+id/menuNormalMode"
            android:titleCondensed="Normal"
            android:title="@string/normal_mode"
            android:checked="true"
            android:icon="@android:drawable/ic_menu_preferences">
        </item>
        <item android:id="@+id/menuEditMode"
            android:titleCondensed="Edit"
            android:title="@string/edit_mode"
            android:checked="false"
            android:icon="@android:drawable/ic_menu_preferences">
        </item>
    </group>
    <item
        android:id="@+id/menuAdd"
        android:title="@string/action_add"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>
