<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".misc.ReviewOptionsFragment">

    <data>
        <variable name="model" type="com.zwstudio.lolly.viewmodels.misc.ReviewOptionsViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/tvMode"
            android:text="@string/label_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spnMode"
            android:selectedItemPosition="@={model.mode}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:labelFor="@+id/tvMode"
            app:layout_constraintTop_toBottomOf="@+id/tvMode" />

        <CheckBox
            android:id="@+id/chkShuffled"
            android:text="@string/label_shuffled"
            android:checked="@={model.shuffled}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintTop_toBottomOf="@+id/spnMode" />

        <CheckBox
            android:id="@+id/chkSpeakEnabled"
            android:text="@string/label_speak_enabled"
            android:checked="@={model.speakingEnabled}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintTop_toBottomOf="@+id/chkShuffled" />

        <CheckBox
            android:id="@+id/chkOnRepeat"
            android:text="@string/label_on_repeat"
            android:checked="@={model.onRepeat}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintTop_toBottomOf="@+id/chkSpeakEnabled" />

        <CheckBox
            android:id="@+id/chkMoveForward"
            android:text="@string/label_move_forward"
            android:checked="@={model.moveForward}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintTop_toBottomOf="@+id/chkOnRepeat" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiInterval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/label_interval"
            app:layout_constraintTop_toBottomOf="@+id/chkMoveForward">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etInterval"
                android:text="@={`` + model.interval}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/label_group"
            app:layout_constraintTop_toBottomOf="@+id/tiInterval">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etGroup"
                android:text="@={`` + model.groupSelected}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiGroups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/label_groups"
            app:layout_constraintTop_toBottomOf="@+id/tiGroup">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etGroups"
                android:text="@={`` + model.groupCount}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/label_review"
            app:layout_constraintTop_toBottomOf="@+id/tiGroups">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvReview"
                android:text="@={`` + model.reviewCount}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>